Trabalhando com CSS
Algumas variações no corpo do codigo, usando RGB e a  função hlsa()

--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <meta charset="UTF-8"/>
         <title>CERVEJA, BREJAS E BIRRAS</title>
         <style>
+            body {
+                background-color: hsl(51, 65%, 50%);
+                color: rgba(0 0 0 1);
+
+            }
             p {
                 text-align: justify;
                 text-align: 50px;
