Trabalahdno com imagens
Alinhamento de imagens.

--- a/index.html
+++ b/index.html
@@ -44,8 +44,17 @@
             de pão de centeio se estragou e passou a apresentar um sabor diferente e agradável, fruto da fermentação alcoólica.</p>
         <h2 style="text-align: center;">Qual foi a primeira marca de cerveja do mundo?</h2>
         <p>
+           
             <b>Weihenstephan</b>     é uma cervejaria e uma marca de cerveja da região alemã da Baviera. <br>
             É considerada a cerveja mais antiga do mundo (artesanal ou industrial), sendo vendida desde 1040 e fabricada desde os anos 800
         </p>
+        <figure>
+            <img src="img/fundo-menor.png" alt="agradável">
+            <figcaption>
+                <h3>Minha primeira cerveja.</h3>
+                <p>O primeiro gole e péssimo!</p>
+            </figcaption>
+        </figure>
        </div>
+       
 </html>
