Trabalhando com CSS
Criando um novo documento separado para trabalhar com o CSS.

--- a/index.html
+++ b/index.html
@@ -3,17 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>CERVEJA, BREJAS E BIRRAS</title>
-        <style>
-            body {
-                background-color: hsl(51, 65%, 50%);
-                color: rgba(0 0 0 1);
-
-            }
-            p {
-                text-align: justify;
-                text-align: 50px;
-            }
-        </style>
+        <link rel="stylesheet" type="text/css"  href="CSS/estilo.css">
     </head>
     <body>
         <div id="interface">
@@ -48,8 +38,8 @@
             <b>Weihenstephan</b>     é uma cervejaria e uma marca de cerveja da região alemã da Baviera. <br>
             É considerada a cerveja mais antiga do mundo (artesanal ou industrial), sendo vendida desde 1040 e fabricada desde os anos 800
         </p>
-        <figure>
-            <img src="img/fundo-menor.png" alt="agradável">
+        <figure class="foto-legenda">
+            <img src="img/encontro.jpg" alt="agradável">
             <figcaption>
                 <h3>Minha primeira cerveja.</h3>
                 <p>O primeiro gole e péssimo!</p>
