--- a/index.html
+++ b/index.html
@@ -42,6 +42,8 @@
             <img src="img/encontro.jpg" alt="agradável">
             <figcaption>
                 <h3>Minha primeira cerveja.</h3>
+                <h4>O primeiro gole e péssimo!</h4>
+
                 <p>O primeiro gole e péssimo!</p>
             </figcaption>
         </figure>
