--- a/index.html
+++ b/index.html
@@ -18,11 +18,20 @@
             
             <img src="IMG/cerveja.jpg">
 
-            - Home
-            - Copos
-            - Fotos
-            - Sabores
-            - Fale conosco
+            <nav>
+                <h1>Menu principal</h1>
+                <ul>
+                <li>Home</li>
+                <li>Copos</li>
+                <li>Fotos</li>
+                    <ol type="A">
+                        <li>multimidia</li>
+                        <li>audio</li>
+                    </ol>
+                <li>Sabores</li>
+                <li>Fale conosco</li>
+                </ul>
+            </nav>
             </header>
         Ao mesmo tempo em que apresenta as tradições e o que existe de melhor sendo <br>feito pelas grandes cervejarias mundiais,
         o autor destaca a qualidade das promissoras microcervejarias artesanais
