--- a/index.html
+++ b/index.html
@@ -20,16 +20,12 @@
 
             <nav>
                 <h1>Menu principal</h1>
-                <ul>
-                <li>Home</li>
-                <li>Copos</li>
-                <li>Fotos</li>
-                    <ol type="A">
-                        <li>multimidia</li>
-                        <li>audio</li>
-                    </ol>
-                <li>Sabores</li>
-                <li>Fale conosco</li>
+                <ul type="disc">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="copos.html">Copos</a></li>
+                <li><a href="fotos.html">Fotos</a></li>
+                <li><a href="sabores.html">Sabores</a></li>
+                <li><a href="fale-conosco.html">Fale conosco</a></li>
                 </ul>
             </nav>
             </header>
@@ -44,7 +40,7 @@
         <h2 style="text-align: center;">Qual foi a primeira marca de cerveja do mundo?</h2>
         <p>
            
-            <b>Weihenstephan</b>     é uma cervejaria e uma marca de cerveja da região alemã da Baviera. <br>
+            <a href="https://pt.wikipedia.org/wiki/Weihenstephan" target="_blank">Weihenstephan</a> é uma cervejaria e uma marca de cerveja da região alemã da Baviera. <br>
             É considerada a cerveja mais antiga do mundo (artesanal ou industrial), sendo vendida desde 1040 e fabricada desde os anos 800
         </p>
         <figure class="foto-legenda">
