--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="UTF-8"/>
         <title>CERVEJA, BREJAS E BIRRAS</title>
-        <link rel="stylesheet" type="text/css"  href="CSS/estilo.css">
+        <link rel="stylesheet" href="CSS/estilo.css">
     </head>
     <body>
         <div id="interface">
@@ -13,12 +13,12 @@
             <h2>Uma viagem saborosa entre as garrafas desse líquido precioso, 
         inventado meio sem querer por mulheres da Idade da Pedra.</h2>
             <h3>por &nbsp; Márcio Evandro</h3>
-            <h4>Atualizado em 06/10/2020</h4>
+            <h4>Atualizado em 11/02/2021</h4>
             </hgroup>
             
             <img src="IMG/cerveja.jpg">
 
-            <nav>
+            <nav id="menu">
                 <h1>Menu principal</h1>
                 <ul type="disc">
                 <li><a href="index.html">Home</a></li>
